@@ -38,6 +38,9 @@
 <p>2020-04-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/effect.c (AdaptiveThresholdImage): Assure that we don't
+attempt to write to output pixels if they have not been selected
+yet.</li>
 <li>magick/utility.c (ExpandFilenames): Properly handle NULL
 filelist and NULL filelist entries.
 (GetGeometry): Assure that there is no one-character stack read
